// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root"
        >
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root FormLabel-disabled"
        >
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root"
        >
          <span
            class="FormLabel-text"
          >
            Label
             (optional)
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="FormField-root"
      >
        <label
          class="FormLabel-root"
        >
          <span
            class="FormLabel-asterisk"
          >
            *
          </span>
          <span
            class="FormLabel-text"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;
